Fixed: scrollbar showing on mobile view

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -95,6 +95,7 @@ body {
 @media screen and (max-width: 860px){
   .center {
     font-size: 1.2rem;
+    padding: 0;
   }
 }
 @media screen and (max-width: 720px){
